# rust-template

./: .release-please-manifest.json  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.alpine  LICENSE.md  Makefile.toml  README.md  cargo-generate.toml  renovate.json
.github/workflows/: automerge.yml  release-please.yml  test.yml
configs/: release-please-config.json  renovate.json
github-actions/: automerge.yml.liquid  dependabot.yml.liquid  release-please.yml.liquid  test.yml.liquid
scripts/: post-script.rhai
src/: env.rs  env_logger.rs  main.rs
