[package]
name = "rust-template"
version = "1.2.2"
description = "Basic Rust project template for async services and CLI applications."
license = "MIT"
authors = ["Kade Robertson <kade@kaderobertson.dev>"]
edition = "2021"

[dependencies]
anyhow = "1.0.75"
dotenvy = "0.15.7"
envy = "0.4.2"
serde = { version = "1.0.189", features = ["derive"] }
thiserror = "1.0.49"
tokio = { version = "1.32.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["fmt", "env-filter", "json"] }

[profile.release]
opt-level = 3
strip = true
codegen-units = 1
lto = true

[profile.release-small]
inherits = "release"
opt-level = "z"