[package]
name = "rust-template"
version = "1.4.0"
description = "Basic Rust project template for async services and CLI applications."
license = "MIT"
authors = ["Kade Robertson <kade@kaderobertson.dev>"]
edition = "2024"

[dependencies]
anyhow = "1.0.100"
dotenvy = "0.15.7"
envy = "0.4.2"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = [
    "fmt",
    "env-filter",
    "json",
] }

[profile.release]
opt-level = 3
strip = true
codegen-units = 1
lto = true

[profile.release-small]
inherits = "release"
opt-level = "z"
